<resources>
    <string name="app_name">Hubben</string>
    <string name="confirm_selection">Confirm selection</string>
    <string name="module_name">Welcome to Hubben and weather app</string>
    <string name="current_weather">CURRENT WEATHER REPORT</string>
    <string name="hourly_report">HOURLY WEATHER REPORT</string>
    <string name="weekly_report">7 DAYS WEATHER REPORT</string>
    <string name="temp_loc_info">Temporary location info</string>
    <string name="temp_button">Button</string>
    <string name="citySearchHint">Enter city name</string>
    <string name="curr_weather_description">Current weather</string>
    <string name="hourly_description">Weather report hour by hour</string>
    <string name="seven_days_description">Weekly weather report</string>
    <string name="seven_days_prec">precipitation amount</string>
    <string name="seven_days_wind">wind</string>
    <string name="seven_days_today_is">today is</string>
    <string name="between_6_and_12">weather in the afternoon is</string>
    <string name="between_12_and_6">weather at night is</string>
    <string name="between_6_and_12_morning">weather in the morning is</string>
    <string name="between_6_and_12_evening">weather in the evening is</string>
    <string name="today_temp">Today\'s temperature is</string>
    <string name="weather_today">weather for today is</string>
    <string name="mmpersec">weather for today is</string>
    <string name="meterpersec">meter per second</string>
    <string name="tap_to_search">tap here for search</string>
    <string name="search">search</string>


    <string-array name="citiesArray">
        <item>Oslo</item>
        <item>Trondheim</item>
        <item>Bergen</item>
        <item>Kristiansand</item>
        <item>Fredrikstad</item>
        <item>Rygge</item>
    </string-array>
    
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RuterApp">ruter_app</string>
    <string name="searchBoxContentDescription">Enter location</string>


</resources>